test/units/ParseSpec/invalid/decl/duplicate-type-name.algst
protocol A = B

type A = Int
